# clay

./: .gitignore  CMakeLists.txt  COMPLETE_C_LEARNING_GUIDE.md  LEARNING_C_WITH_CLAY.md  LICENSE.md  README.md  clay.h  flake.nix
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  odin-bindings-update.yml
bindings/D/: README.md  clay.c  main.d
bindings/c3/: README.md  project.json
bindings/c3/examples/: video-example.c3
bindings/c3/source/: clay-depracated.c3  clay-raylib-renderer.c3  clay.c3
bindings/cpp/: README.md
bindings/cpp/ClayMan/: ClayMan.md
bindings/csharp/: README
bindings/d/: README
bindings/jai/: .gitignore  README.md  generate.jai  module.jai  windows.jai
bindings/jai/clay-jai/: .gitignore  generate.jai  linux.jai  module.jai  windows.jai
bindings/jai/examples/: clay_official_website.jai  clay_renderer_raylib.jai
bindings/java/: README.md
bindings/odin/: .gitignore  README.md  build-clay-lib.sh  clay-official-website  clay_renderer_raylib.odin  example.odin  main.odin  odinfmt.json  ols.json  test.odin
bindings/odin/clay-odin/: clay.odin
bindings/rust/: README
bindings/zig/: README
cmake/: FindCairo.cmake
docs/: 14_bit_manipulation.md  15_preprocessor_macros.md  16_advanced_macros.md  17_memory_management.md  21_standard_library.md  22_file_io.md  23_command_line_arguments.md  README_C_TUTORIALS.md
examples/: README.md
examples/GLES3-GLFW-video-demo/: .gitignore  CMakeLists.txt  Makefile.emscripten  Makefile.macos  README.md  main.c
examples/GLES3-SDL2-sidebar-scrolling-container/: .gitignore  CMakeLists.txt  Makefile.emscripten  Makefile.macos  README.md  main.c
examples/GLES3-SDL2-video-demo/: .gitignore  CMakeLists.txt  Makefile.emscripten  Makefile.macos  README.md  main.c
examples/GLFW-video-demo/: CMakeLists.txt  main.c
examples/GLFW-video-demo/glad/: gl.c  gl.h
examples/RSGL_rendering/GLFW_windowing/: CMakeLists.txt  Makefile  clay_backend_glfw.c  main.c
examples/RSGL_rendering/RGFW_windowing/: CMakeLists.txt  Makefile  RGFW.h  clay_backend_rgfw.c  main.c
examples/SDL2-video-demo/: CMakeLists.txt  main.c
examples/SDL3-simple-demo/: CMakeLists.txt  main.c
examples/allegro4-demo/: CMakeLists.txt  README  main.c
examples/allegro4-demo/res/: 8x16.pcx  coral.pcx  env.pcx  ex06.pcx  liblogo.pcx
examples/cairo-pdf-rendering/: CMakeLists.txt  main.c
examples/clay-official-website/: CMakeLists.txt  build.sh  index.html  index.html.in  main.c
examples/cpp-project-example/: CMakeLists.txt  main.cpp
examples/introducing-clay-video-demo/: CMakeLists.txt  main.c
examples/minimal-imgui/: CMakeLists.txt  main.cpp
examples/minimal-sdl2/: CMakeLists.txt  main.c
examples/multi-context-raylib-sidebar-scrolling-container/: CMakeLists.txt  main.c
examples/ncurses-example/: CMakeLists.txt  main.c
examples/ncurses-sidebar-scrolling-container/: Readme.md  main.c  multi-compilation-unit.c
examples/playdate-project-example/: .gitignore  CmakeLists.txt  README.md  clay-video-demo-playdate.c  main.c
examples/playdate-project-example/Source/: pdxinfo
examples/raylib-multi-context/: CMakeLists.txt  main.c
examples/raylib-sidebar-scrolling-container/: CMakeLists.txt  main.c  multi-compilation-unit.c
examples/raylib-transitions/: CMakeLists.txt  main.c
examples/sdl3_renderer/: CMakeLists.txt  main.c
examples/shared-layouts/: clay-video-demo.c
examples/sokol-corner-radius/: CMakeLists.txt  main.c
examples/sokol-video-demo/: CMakeLists.txt  main.c  sokol.c
examples/termbox2-demo/: CMakeLists.txt  main.c  readme.md
examples/termbox2-image-demo/: CMakeLists.txt  main.c  readme.md
examples/terminal-example/: CMakeLists.txt  main.c
examples/textui-sidebar-scrolling-container/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  clay_examples_textui_sidebar_scrolling_container  cmake_install.cmake  main.c
examples/vulkan-demo/: CMakeLists.txt  README.md  main.cpp
examples/win32_gdi/: CMakeLists.txt  build.ps1  main.c  quickstart.c
examples/win32_gdi/image_demo/: build.ps1  clay-win32-gdi-image-example.c  image_demo.c
fuzz/: fuzzing_target.c
generator/: array_add.template.c  array_add_value.template.c  array_allocate.template.c  array_allocate_pointer.template.c  array_define.template.c  array_define_slice.template.c  array_get.template.c  array_get_slice.template.c  array_get_value.template.c  array_remove_swapback.template.c  array_set.template.c  cli.py  gen_repo_bindings.sh  generate_templates.js  parser.py  requirements.txt
generator/clay_header_generator/: array_add_value.template.c  array_allocate.template.c  array_define.template.c  array_define_slice.template.c  array_get_value.template.c  array_set.template.c
generator/generators/: base_generator.py  odin_generator.py
generator/generators/odin/: clay.template.odin
renderers/: clay_renderer.h
renderers/GLES3/: clay_renderer_gles3.h  clay_renderer_gles3_loader_stb.c
renderers/NanoVG/: README  clay_renderer_NanoVG.c
renderers/RSGL/: RSGL.h  RSGL_gl.h  clay_renderer_RSGL.c
renderers/SDL2/: README  clay_renderer_SDL2.c
renderers/SDL3/: README  clay_renderer_SDL3.c
renderers/SFML2/: clay_renderer_SFML2.cpp  clay_renderer_SFML2.hpp
renderers/alleg4/: alleg4.c  alleg4.h
renderers/cairo/: clay_renderer_cairo.c
renderers/ncurses/: README.md  clay_renderer_ncurses.c
renderers/playdate/: clay_renderer_playdate.c
renderers/raylib/: clay_renderer_raylib.c  clay_renderer_raylib.h  raymath.h
renderers/sokol/: sokol_clay.h
renderers/termbox2/: clay_renderer_termbox2.c  image_character_masks.h
renderers/terminal/: clay_renderer_terminal.c  clay_renderer_terminal_ansi.c
renderers/textui/: clay_renderer_textui.c
renderers/vulkan/: clay_renderer_vulkan.c
renderers/web/: build-wasm.sh  clay.wasm
renderers/web/canvas2d/: clay-canvas2d-renderer.html
renderers/web/html/: clay-html-renderer.html
renderers/webgpu/: clay_renderer_webgpu.h
renderers/win32_gdi/: README.md  clay_renderer_gdi.c
tests/: docker-compose.yml  run-tests.sh
(+29 files in other folders)
